# libfreenect

./: README.asciidoc
examples/: CMakeLists.txt  glview_xtion_record.c  kinect_register.c  xtion_register.c
